<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">sven\'guage</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="linguage">lin\'guage</string>
    <string name="firstLaunchIntro">Hang on, we\'re preparing your course…</string>
    <string name="title_activity_sweden">SwedenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_interview">InterviewActivity</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="title_activity_LAPs">Swedish LAPs</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="info">Info</string>

    <!-- Sliding Menu -->
    <string name="menu_icon_contentdesc">Menu Icon</string>
    <string name="menu_placeholder">Medium Text</string>
    <string name="my_swedish">My Swedish</string>

    <!-- Main Feed -->
    <string name="todays_challenges">Today\'s Challenges</string>
    <string name="user_face">User\'s face</string>
    <string name="challenge_icon">Challenge Icon</string>
    <string name="title_activity_vocabulary">VocabularyActivity</string>
    <string name="friend_challenge_title">Charles watched…</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <!-- Vocabulary Activity -->
    <string name="vocab_words">Words</string>
    <string name="vocab_sentences">Sentences</string>
    <string name="vocab_context">In Context</string>
    <string name="vocab_flavor">Flavor Image</string>
    <string name="reply_left">Reply Left</string>
    <string name="reply_right">Reply Right</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <!-- definition fragment -->
    <string name="skanska">Skånska</string>
    <string name="stockholmska">Stockholmska</string>
    <string name="norrlandska">Norrlandska</string>
    <!-- video activity -->
    <string name="video_captions">Det känns som jag vandrar fram i utnöta skor\n
Täckta av vägens damm där minnena gror\n
\n\n
Minns du när vi såg varann\n
En flaska vin och ett rock ‘n’ roll band\n
Lustigt hur det stannar kvar\n
Hur man minns, allting smått\n
Dras den tid, som har gått, som igår\n
\n\n
Det känns som jag vandrar fram i utnöta skor\n
Täckta av vägens damm där minnena gror\n
Det känns som jag vandrar fram i utnöta skor\n
Täckta av vägens damm där minnena gror\n
\n\n
Minns du hur dom sen gick fel\n
Dom krav som kom, växte snabbt till ett gräl\n
Va hjälper dej att ångra sej\n
Och tro att de som hänt\n
Skedde mot, bättre vett, växla spår\n
\n\n
Det känns som jag vandrar fram i utnöta skor\n
Täckta av vägens damm där minnena gror\n
\n\n
Det känns som jag vandrar fram i utnöta skor\n
Täckta av vägens damm där minnena gror\n
Där minnena gror</string>
    <string name="title_activity_drawer">DrawerActivity</string>

</resources>