<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="@drawable/challenge_card_states"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/list_padding"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="@dimen/list_padding" >

    <ImageView
        android:id="@+id/friend_face"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:contentDescription="@string/challenge_icon"
        android:scaleType="fitCenter"
        android:src="@drawable/friend" />

    <TextView
        android:id="@+id/friend_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/friend_face"
        android:layout_alignBottom="@+id/friend_face"
        android:layout_toRightOf="@+id/friend_face"
        android:gravity="center_vertical"
        android:text="@string/friend_challenge_title"
        android:textAppearance="@style/textAppearanceMediumLightGrey" />

    <ImageView
        android:id="@+id/friend_challenge_icon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/friend_face"
        android:scaleType="fitCenter"
        android:contentDescription="@string/challenge_icon"
        android:text="@string/menu_placeholder" />

    <TextView
        android:id="@+id/friend_challenge_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/friend_challenge_icon"
        android:layout_alignBottom="@+id/friend_challenge_icon"
        android:layout_toRightOf="@+id/friend_challenge_icon"
        android:gravity="center_vertical"
        android:text="@string/menu_placeholder"
        style="@style/textAppearanceLargeLight" />

</RelativeLayout>